# new_project_2

./: README.md
Game/: CMakeLists.txt  FindSFML.cmake  Makefile  README.md  StoreMakefile  TestStoreMakefile  main.out  openall.sh
Game/game_data/: menu_config.txt  rules.txt
Game/game_data/objects/: about.txt  add_object  add_object.cpp
Game/game_data/objects/beings/allomancy/mistborn/: mistborn.txt  test_mistborn_1.txt
Game/game_data/objects/beings/allomancy/mistings/: hunter.txt  lightener.txt  test_misting_1.txt  trasher.txt
Game/game_data/objects/beings/soldiery/: soldier.txt  test_soldier_1.txt  test_soldiery_1.txt
Game/game_data/objects/metals/: test_metal_1.txt
Game/graphic_wrap/include/: color.hpp  contextsettings.hpp  event.hpp  image.hpp  rect.hpp  string.hpp  system.hpp  vector2.hpp  videomode.hpp  window.hpp
Game/graphic_wrap/src/: color.cpp  contextsettings.cpp  event.cpp  image.cpp  string.cpp  videomode.cpp  window.cpp
Game/project/include/: allomant.hpp  allomantic_power.hpp  being.hpp  button.hpp  cell.hpp  definitions.hpp  field.hpp  game.hpp  graphics.hpp  item.hpp  menu.hpp  metal.hpp  mistborn.hpp  misting.hpp  object.hpp  page.hpp  player.hpp  rect.tpp  render_objects.hpp  soldier.hpp  store.hpp  store_definitions.hpp  tab.hpp  ui.hpp  vector2.tpp
Game/project/src/: allomant.cpp  allomantic_power.cpp  being.cpp  button.cpp  cell.cpp  field.cpp  game.cpp  item.cpp  main.cpp  menu.cpp  metal.cpp  mistborn.cpp  misting.cpp  object.cpp  page.cpp  player.cpp  soldier.cpp  store.cpp  store_main.cpp  tab.cpp  ui.cpp
Game/tests/src/: test_field.cpp  test_game.cpp  test_menu.cpp  test_object.cpp  test_store.cpp
